<resources>
    <string name="app_name">Go PM Go</string>
    <string name="title_home">Home</string>

    <string name="action_bar_title_pm_result">PM Result</string>
    <string name="action_bar_title_dev_result">Dev Result</string>
    <string name="action_bar_title_likelihood_severity">Likelihood and Severity</string>
    <string name="action_bar_title_refactored_solution">Refactored Solution</string>
    <string name="actionbar_title_likelihood_severity">Likelihood and Severity</string>

    <string name="role_quest_dev">dev</string>
    <string name="role_quest_pm">pm</string>

    <string name="title_result_as_pm">Result as PM</string>
    <string name="title_result_as_dev">Result as Dev</string>

    <string name="title_project_manager_card">I"'"m a Project Manager</string>
    <string name="title_developer_card">I"'"m a Developer</string>

    <string name="title_sidelining">Sidelining</string>
    <string name="title_ultimate_weapon">Ultimate Weapon</string>

    <string name="title_likelihood">Likelihood</string>
    <string name="title_severity">Severity</string>

    <string name="title_likelihood_severity">What"'"s Likelihood and Severity?</string>

    <string name="title_band_aid">Band Aid</string>
    <string name="title_self_repair">Self Repair</string>
    <string name="title_refactoring">Refactoring</string>

    <string name="title_refactored_solution">Refactored Solution</string>
    <string name="title_question_refactored_solution">What"'"s band aid, self repair and refactored solution?</string>

    <string name="title_no_result_data">There"'"s no problem found currently.</string>

    <string name="text_no_result_data">You must answer the questionnaire to diagnose your team or manager and get treatment recommendation from us</string>

    <string name="text_bandaid_refactored_solution"><![CDATA[<b>Band Aid</b>]]> is a short-term fix or coping strategy for those in the midst of the antipattern who have neither the time nor influence to refactor it properly.</string>
    <string name="text_selfrepair_refactored_solution"><![CDATA[<b>Self Repair</b>]]> is a first step for someone perpetuating the antipattern - how you can help yourself improve.</string>
    <string name="text_refactoring_solution"><![CDATA[<b>Refactoring</b>]]> is changes that should be made to remedy the situation and their rationale. Sometimes these are under the control of an individual, but often they involve cultural or institutional changes.</string>

    <string name="title_pre_quest_pm">Questionnaire for PM</string>
    <string name="title_pre_quest_dev">Questionnaire for Developer</string>

    <string name="text_pre_quest_dev">You are going to answer questionnaire for your manager and your team culture. You can detect your team"'"s antipatterns and we will give you some recommendation to refactor them. Let"'"s make a better future together!</string>
    <string name="text_pre_quest_pm">You are going to answer questionnaire about your member. You can detect your team member"'"s antipatterns and we will give you some recommendation to refactor him/her. Let"'"s make a better future together.</string>

    <string name="text_band_aid">Band aid for your member</string>
    <string name="text_self_repair">Self repair for your member</string>
    <string name="text_refactoring">Refactoring for your member</string>

    <string name="text_detail1_likelihood_severity">Likelihood and severity is a part of qualitative risk analysis process. Risk analysis is the process of prioritizing risks based on the probability of the risk occurring and the impact it would have on the project.</string>
    <string name="text_detail2_likelihood_severity"><![CDATA[<b>Likelihood</b>]]>, also named as probability, shows how likely the antipatterns happen in software development process (SDP). <![CDATA[<b>Severity</b>]]>, also named as impact, shows how bad it is if it happens.</string>

    <string name="text_sidelining">Orang yang suka mengurang-ngurangi pekerjaan, seringkali karena memiliki agenda pribadi yang seringkali tersembunyi (hidden agenda).</string>
    <string name="text_ultimate_weapon">Orang yang menjadi andalan di dalam organisasi sehingga dijadikan senjata utama dalam segala permasalahan.</string>

    <string name="text_project_manager_card">If you"'"re a project manager and want to evaluate your member</string>
    <string name="text_developer_card"> If you"'"re a team member and want to evaluate your manager and team</string>

    <string name="text_result_problem_found">This is your current problem found</string>
    <string name="text_result_click_antipattern">Click on antipatterns to see detail solutions</string>
    <string name="text_question_result">What"'"s likelihood and severity?</string>

    <string name="message_timeout">timeout</string>
    <string name="start">start</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="get_to_know_your_team">Get to know your team</string>
    <string name="choose_your_questionnaire_based_on_your_role">Choose your questionnaire based on your role :</string>
</resources>
